#91 chore: WIP - Add generation of population cells
